--- a/static/styles.css
+++ b/static/styles.css
@@ -331,6 +331,10 @@ header {
   display: block;
 }
 
+.dropdown.visible #plDropdown-content {
+  display: block;
+}
+
 .dropdown-content a {
   color: white;
   padding: 12px 16px;
@@ -361,6 +365,51 @@ header {
 .dropdown-content a:last-child:hover{
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+}
+
+#plDropdown-content {
+  display: none;
+  position: absolute;
+  background-color: black;
+  min-width: 220px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
+  margin-left: 1.5rem;
+  z-index: 1;
+  border-radius: 5px;
+  margin-top: -.5rem;
+}
+
+#plDropdown-content li {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+#plDropdown-content li:hover {
+  background-color: #1DB954;
+  cursor: pointer;
+}
+
+#plDropdown-content li:active{
+  background-color: gold;
+  color: black;
+}
+
+#plDropdown-content li:hover:first-child {
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+#plDropdown-content li:hover:last-child {
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  background-color: red;
+  color: black;
+}
+
+#plDropdown-content li:last-child{
+  color: red;
 }
 
 #prompt-outer-container{
@@ -790,11 +839,11 @@ header {
 .pl-thumb-user-container{
   flex: 3;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-
+  /* border: 1px solid blue; */
 }
 
 .pl-thumb-ellipsis-container{
@@ -802,8 +851,9 @@ header {
   align-items: center;
   justify-content: flex-end;
   flex: .1;
-  margin-right: 1.5rem;
+  padding-left: .5rem;
 
+  padding-bottom: .51rem;
 }
 
 .pl-thumb-ellipsis-container a{
@@ -811,14 +861,25 @@ header {
 }
 
 .pl-thumb-user-img{
+  display: flex;
+  align-items: center;
   padding: 1rem;
-  padding-left: 1.5rem;
+  padding-left: 1rem;
+  padding-right: 2rem;
 }
 
 .pl-thumb-user-name-container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: inline;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.pl-thumb-user-name-container a{
+  padding-top: 1.82rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .pl-thumb-prompt-content{
