--- a/static/styles.css
+++ b/static/styles.css
@@ -921,6 +921,7 @@ header {
 
 .pl-thumb-user-img img{
   width: 40px;
+  height: 40px;
   border-radius: 50px;
   box-shadow: 0 0 .5rem .5rem rgba(0, 0, 0, 0.15);
 }
