--- a/static/styles.css
+++ b/static/styles.css
@@ -323,10 +323,6 @@ header {
   margin-top: .75rem;
 }
 
-#dropdown-about{
-  display: none;
-}
-
 .dropdown.visible .dropdown-content {
   display: block;
 }
@@ -362,9 +358,15 @@ header {
   color: black;
 }
 
-.dropdown-content a:last-child:hover{
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+#dropdown-about{
+  display: none;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+#dropdown-about:hover{
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 #plDropdown-content {
@@ -408,11 +410,15 @@ header {
 
 #remove-pro{
   color: red;
+  cursor: pointer;
+  padding: 12px 16px;
 }
 
 #remove-pro:hover{
   background-color: red;
   color: black;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 #prompt-outer-container{
