--- a/static/styles.css
+++ b/static/styles.css
@@ -252,7 +252,6 @@ header {
 
 .prof-spot-img img{
   width: 64px;
-  opacity: 90%;
   border-radius: 50px;
   box-shadow: 0 0 .5rem .5rem rgba(0, 0, 0, 0.15);
 }
@@ -499,10 +498,11 @@ header {
   color: #cecece;
   border: 1px solid transparent;
 }
-.pro-option:hover{
+
+/* .pro-option:hover{
   border: 1px solid var(--spotifyGreen);
   cursor: default;
-}
+} */
 
 .option {
   background-color: #242424;
@@ -2834,7 +2834,7 @@ header {
   border-radius: 10px;
   margin: 1rem auto;
   padding: 2rem;
-  width:100%;
+  width: 100%;
   box-shadow: 0px 8px 16px 10px rgba(0, 0, 0, 0.5);
   border: 1px solid transparent;
 }
@@ -3023,7 +3023,7 @@ header {
     flex: 1;
     margin: 1rem;
     margin-top: 0;
-    height: 34vh;
+    height: 260px;
   }
 
   .step:last-child{
@@ -3548,8 +3548,11 @@ header {
     justify-content: center;
     align-items: center;
     padding: 2rem;
+    padding-left: 0;
+    padding-right: 0;
     padding-top: 0;
     margin-top: .75rem;
+    width: 100%;
   }
 
   .step{
@@ -3557,7 +3560,7 @@ header {
     margin: 1rem;
     margin-top: 0;
     height: 34vh;
-    width: 100%
+    width: 90%;
   }
 
   .step:last-child{
@@ -3630,7 +3633,7 @@ header {
   }
 
   .pl-thumb-user-name, .disc-thumb-user-name{
-    font-size: 1.15rem;
+    font-size: 1rem;
   }
 
   /* .profstats div{
@@ -3734,6 +3737,7 @@ header {
 
 .how-it-works{
   font-size: 1.75rem;
+  margin-bottom: .5rem;
 }
 
 .step-number{
